# cmake-example

./: README.md
example1_helloworld/: CMakeLists.txt  helloworld.cpp
example2_include_repo/: CMakeLists.txt
example2_include_repo/src/: main.cpp  persopn.cpp
example3_lib_so/: CMakeLists.txt
example4_lib_a/: CMakeLists.txt
example4_lib_a/include/: person.h
example4_lib_a/src/: .main.cpp.swp
example5_include_lib/: CMakeLists.txt
example6_googletest/: CMakeLists.txt  CMakeLists.txt.in  README.md  my_any.cpp  my_any.h  my_objects.cpp  my_objects.h  my_tuple.h
example6_googletest/test/: my_any.t.cpp  my_tuple.t.cpp
